[gd_scene load_steps=17 format=2]

[ext_resource path="res://ui/ui.gd" type="Script" id=1]
[ext_resource path="res://ui/game_over/GameOver.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/Timer.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/game_over/StartLevel.tscn" type="PackedScene" id=4]
[ext_resource path="res://ui/controls/Connections.tscn" type="PackedScene" id=5]
[ext_resource path="res://ui/Resources.tscn" type="PackedScene" id=6]
[ext_resource path="res://ui/pause_menu/PauseMenu.tscn" type="PackedScene" id=7]

[sub_resource type="StyleBoxFlat" id=1]
draw_center = false
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color( 0.407843, 1, 0, 1 )
border_blend = true

[sub_resource type="StyleBoxFlat" id=2]
draw_center = false
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color( 1, 0, 0, 1 )
border_blend = true

[sub_resource type="StyleBoxFlat" id=3]
draw_center = false
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color( 1, 0.470588, 0, 1 )
border_blend = true

[sub_resource type="InputEventAction" id=4]
action = "next_week"

[sub_resource type="ShortCut" id=5]
shortcut = SubResource( 4 )

[sub_resource type="Shader" id=6]
code = "shader_type canvas_item;

uniform float amount: hint_range(0.0, 5.0);

void fragment() {
	COLOR.rgb = textureLod(SCREEN_TEXTURE, SCREEN_UV, amount).rgb;
}"

[sub_resource type="ShaderMaterial" id=7]
shader = SubResource( 6 )
shader_param/amount = 4.0

[sub_resource type="Shader" id=8]
code = "shader_type canvas_item;

uniform float amount: hint_range(0.0, 5.0);

void fragment() {
	COLOR.rgb = textureLod(SCREEN_TEXTURE, SCREEN_UV, amount).rgb;
}"

[sub_resource type="ShaderMaterial" id=9]
shader = SubResource( 8 )
shader_param/amount = 4.0

[node name="ui" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="BuildHighlight" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DismantleHighlight" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RepairHighlight" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConnectionControls" parent="." instance=ExtResource( 5 )]
margin_top = -29.0

[node name="Resources" parent="." instance=ExtResource( 6 )]
margin_left = -239.0
margin_right = 239.0

[node name="Timer" parent="." instance=ExtResource( 3 )]
margin_left = -114.0
margin_top = -74.0
shortcut = SubResource( 5 )

[node name="GameOver" parent="." instance=ExtResource( 2 )]
pause_mode = 2
visible = false
material = SubResource( 7 )
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="StartLevel" parent="." instance=ExtResource( 4 )]
pause_mode = 2
visible = false
material = SubResource( 9 )

[node name="PauseMenu" parent="." instance=ExtResource( 7 )]
visible = false
[connection signal="cable_size_btn_pressed" from="ConnectionControls" to="." method="_on_ConnectionControls_cable_size_btn_pressed"]
[connection signal="dismantle_pressed" from="ConnectionControls" to="." method="_on_ConnectionControls_dismantle_pressed"]
[connection signal="repair_pressed" from="ConnectionControls" to="." method="_on_ConnectionControls_repair_pressed"]
[connection signal="untoggle" from="ConnectionControls" to="." method="_on_ConnectionControls_untoggle"]
[connection signal="maintenance_changed" from="Resources" to="." method="_on_Resources_maintenance_changed"]
[connection signal="pressed" from="Timer" to="." method="_on_Timer_pressed"]
[connection signal="next_level_pressed" from="GameOver" to="." method="_on_GameOver_next_level_pressed"]
[connection signal="retry_pressed" from="GameOver" to="." method="_on_restart_pressed"]
[connection signal="start_level_pressed" from="StartLevel" to="." method="_on_StartLevel_start_level_pressed"]
[connection signal="restart_pressed" from="PauseMenu" to="." method="_on_restart_pressed"]
